Correction of the RunDetails.

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -140,7 +140,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# from azureml.widgets import RunDetails\n",
+        "from azureml.widgets import RunDetails\n",
         "from azureml.train.sklearn import SKLearn\n",
         "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
         "from azureml.train.hyperdrive.policy import BanditPolicy\n",
@@ -205,7 +205,7 @@
         "hyperdrive_run = exp.submit(hyperdrive_config)\n",
         "\n",
         "# Monitor HyperDrive runs You can monitor the progress of the runs with the following Jupyter widget\n",
-        "# RunDetails(hyperdrive_run).show()\n",
+        "RunDetails(hyperdrive_run).show()\n",
         "\n",
         "hyperdrive_run.wait_for_completion(show_output=True)\n",
         "\n",
